--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ header {
 }
 
 .container {
-    position: relative;
+    position: absolute;
 }
 
 .title-content {
@@ -85,42 +85,30 @@ header {
 
 .content {
     position: absolute;
-    top: 48%;
-    right: 11%;
+    top: 50%;
+    right: 12%;
     font-size: 18px;
     font-weight: normal;
     color: #150f0fe3;
     text-align: center;
 }
 
-.btn {
-    position: relative;
-    padding: 12px 24px;
-    color: white;
-    display: block;
-    opacity: 0.8;
-    border-radius: 4px;
-}
-
-.btn:hover {
-    opacity: 1;
-}
-
-.message-wrapper {
-    border-bottom: 1px solid #eee;
-    padding-bottom: 80px;
+.btn-message {
+    position: absolute;
+    top: 65%;
+    right: 22%;
+    font-size: 18px;
+    font-weight: normal;
+    color: #ee484ae3;
     text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border: 4px solid #ee484ae3;
+    padding: 18px 100px;
+    border-radius: 8px;
 }
 
-.message {
-    padding: 15px 40px;
-    background-color: #ee1e21e3;
-    cursor: pointer;
-    box-shadow: 0 7px #150f0fe3;
-}
-
-.message:active {
-    position: relative;
-    top: 7px;
-    box-shadow: none;
+.btn-message:hover {
+    background-color: #ee484ae3;
+    color: whitesmoke;
 }
